--- a/public/guest/style.css
+++ b/public/guest/style.css
@@ -57,7 +57,7 @@ body a:hover {
 .menu-wrapper {
     transition: background-color .2s linear;
     z-index: 99 !important;
-    background-color: #000000;
+    background-color: #1F1F1F;
     width: 100% !important;
     top: 0;
     position: fixed;
