--- a/public/guest/_droow/assets/css/style.css
+++ b/public/guest/_droow/assets/css/style.css
@@ -2,7 +2,7 @@
 /*-----------------------------------------------------------
 
   Template Name: Droow - Ajax Portfolio Showcase HTML Template
-  Template URI: http://theme.dsngrid.com/droow
+  Template URI: https://theme.dsngrid.com/droow
   Description: Droow Ajax Portfolio Showcase HTML Template
   Author: design_grid
   Author URI: https://themeforest.net/user/design_grid
