--- a/public/guest/_droow/assets/css/style.css
+++ b/public/guest/_droow/assets/css/style.css
@@ -2935,7 +2935,8 @@ a:hover, a:active {
 
 .site-header .extend-container .inner-header .main-logo {
   width: 96px;
-  padding-top: 4px;
+  padding-top: 0px;
+  /* padding-top: 4px; */
   position: relative;
   z-index: 9999;
   -webkit-transition: width .5s ease-in-out 0s;
